# rustmail

./: Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  README.md  clippy.toml  docker-compose.yml
src/: lib.rs  main.rs  settings.rs
src/send/: dto.rs  mod.rs  send_controller.rs
test/: send.http  test.sh
