[package]
name = "rustmail"
version = "0.1.0"
edition = "2024"
authors = ["Alberto Ielpo <alberto.ielpo@gmail.com>"]

[dependencies]
actix-web = { version = "4" }
serde = "1.0.228"
serde_json = "1.0.145"
time = "0.3.44"
env_logger = "0.11.8"
actix-web-lab = "0.24.3"
log = "0.4.29"
lettre = "0.11.19"
base64 = "0.22.1"
